start modawild project. Add index archive and css and js folders

--- a/restaurante-araraquara/index.html
+++ b/restaurante-araraquara/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon-restaurante.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Restaurante Araraquara</title>
 </head>
 <body>
@@ -34,21 +34,29 @@
                     <h2>Quem Somos?</h2>
                         <p>O Restaurante Araraquara é o fruto de uma paixão pela culinária que começou há décadas. Fundado por um grupo de amigos apaixonados por gastronomia, nossa história tem suas raízes na tradição familiar e no amor pela boa comida.
                             Inspirados pela rica cultura culinária de Araraquara, decidimos criar um espaço onde a autenticidade se encontra com a inovação. Nossos chefs talentosos e dedicados trazem para a mesa pratos cuidadosamente elaborados, utilizando ingredientes frescos e locais. <p>
-                        <!-- <p>Aqui, cada refeição é uma celebração da diversidade de sabores que a região oferece. Desde pratos clássicos até criações contemporâneas, nossa missão é proporcionar uma experiência gastronômica única, marcada pelo sabor e pela hospitalidade.
+                        <p>Aqui, cada refeição é uma celebração da diversidade de sabores que a região oferece. Desde pratos clássicos até criações contemporâneas, nossa missão é proporcionar uma experiência gastronômica única, marcada pelo sabor e pela hospitalidade.
                     
                         Valorizamos cada cliente que cruza nossas portas e estamos comprometidos em criar momentos memoráveis em torno da mesa. Seja para uma reunião informal ou uma ocasião especial, estamos aqui para tornar cada visita uma experiência deliciosa e acolhedora.
                     
-                        Que cada refeição seja uma história de amor pela gastronomia!</p>  -->
+                        Que cada refeição seja uma história de amor pela gastronomia!</p> 
                 </div>
                 <div class="imagens-container">
                     <div class="imagem-1">
-                        <a href="#"><img class="imagem" src="https://images.pexels.com/photos/2102934/pexels-photo-2102934.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" loading="lazy"></a>
+                        <a href="#">
+                            <div class="animation-border-container">
+                                <img class="imagem" src="https://images.pexels.com/photos/2102934/pexels-photo-2102934.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" loading="lazy">
+                            </div>
+                        </a>
                         <h3>Chef Alexander Dubois</h3>
                         <p>Chef francês conhecido por sua maestria na arte da alta cozinha. Com um pedigree de treinamento em prestigiadas escolas culinárias na França, Dubois traz uma abordagem clássica e refinada à culinária. Dubois é famoso por suas habilidades na apresentação de pratos que são verdadeiras obras de arte com sabores que transportam os comensais para a tradição culinária francesa. Seu compromisso com ingredientes frescos e sazonais é evidente em cada criação que sai de sua cozinha.</p>
                     </div>
 
                     <div class="imagem-2">
-                        <a href="#"><img src="https://images.pexels.com/photos/4252137/pexels-photo-4252137.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" loading="lazy"></a>
+                        <a href="#">
+                            <div class="animation-border-container">
+                                <img src="https://images.pexels.com/photos/4252137/pexels-photo-4252137.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" loading="lazy">
+                            </div>
+                        </a>
                         <h3>Chef Ricardo Santos</h3>
                         <p> Chef brasileiro conhecido por sua abordagem inovadora na culinária fusion. Com uma carreira que se estende por duas décadas, Santos combina ingredientes tradicionais brasileiros com técnicas culinárias globais, resultando em pratos únicos e deliciosos. Sua paixão pela exploração gastronômica o levou a viajar por diferentes partes do mundo, absorvendo influências que ele habilmente incorpora em seu menu. O Chef Ricardo Santos oferece aos clientes uma experiência culinária única, onde sabores autênticos se fundem de maneiras inesperadas.</p>
                     </div>
@@ -59,6 +67,13 @@
 
         <section id="cardapio">
             <h2>Cardápio do Dia</h2>
+
+            <div id="container-cardapio">
+                <div class="prato1"></div>
+                <div class="prato2"></div>
+                <div class="prato3"></div>
+            </div>
+
         </section>
     </main>
     <footer></footer>
